--- a/oscarbot/i18n/en.json
+++ b/oscarbot/i18n/en.json
@@ -2,7 +2,7 @@
     "whatProjectsAmIWorkingOnResponse": "You own ${myReposCount} repositories and have contributed to ${contributedReposCount} repositories.",
 	"countOpenPRsResponse": "${projectName} has ${openPullRequests} open pull requests.",
 	"countIssuesResponse": "Jay-Z has 99 problems but ${projectName} only has ${issues}!",
-	"describeLastCommitResponse": "${author} was the most recent person to comment ${fromNow} on ${repository} and they said ${message}",
+	"describeLastCommitResponse": "${author} was the most recent person to commit ${fromNow} on ${repository} and they said ${message}",
 	"getStarsResponse": "If ${projectName} keeps stealing all the stars, the night sky will soon be empty! It currently has ${stars} stars",
 	"elicitSlotGitHubUser": "What's your GitHub username?",
 	"openIssueRequestTitle": "Sure, I’ll need a title for that, what do you want to call it?",
